# wg-mesh

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  justfile  mesh.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
conf/: config1.json  config2.json  config3.json  config4.json  config5.json
container_tests/: Dockerfile  compose.yml
container_tests/conf/: config1.json  config2.json  config3.json  config4.json  config5.json
docs/: .gitignore  architecture.md
release/: .gitignore  Dockerfile  Dockerfile_dev
src/mesh/: .gitignore  __main__.py  _version.py  crypto.py  daemons.py  mesh.py  metrics.py  node.py  routing.py  utils.py  wg.py
src/mesh/linux_net/: gre.py  proc.py  seg6.py  vrf.py  vxlan.py  wg.py
src/mesh/linux_net/seg6/: __init__.py  controller.py  csid.py  operations.py
src/mesh/utils/: algorithm.py  crypto.py  ip.py  version.py
tests/: .gitignore  conftest.py  test_algorithm.py  test_crypto.py  test_node.py  test_protocol.py
tests/container_tests/: compose.yml  test_convergence.py
tests/container_tests/conf/: config1.json  config2.json  config3.json  config4.json  config5.json
