[project]
name = "wg-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "prometheus-client>=0.20",
]

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not container'"
markers = [
    "container: tests requiring Docker with NET_ADMIN (run via: just test-container)",
]
